--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -3,11 +3,6 @@
     <head>
         <meta charset="utf-8">
         <title>Test</title>
-        <link rel="stylesheet" href="/styles/resets.css">
-        <link rel="stylesheet" href="/styles/base.css">
-        <link rel="stylesheet" href="/styles/header.css">
-        <link rel="stylesheet" href="/styles/form.css">
-        <link rel="stylesheet" href="/styles/footer.css">
     </head>
     <body>
         <header>
@@ -20,7 +15,7 @@
                     <input type="submit" value="Submit" id="submit">
                 </form>
         </section>
-        <footer>
+        <footer id="footer">
             <p>Project 4 in Udacity Front End Develoer Nanodegree Pogram &copy 2018</p>
         </footer>
     </body>
