Issue with jest testing

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -10,8 +10,8 @@
         </header>
         <section>
                 <form id="formBox">
-                    <label for="textBox">Url or text to evaluate:</label><br>
-                    <input type="text" id="textBox" name="textBox" placeholder="Copy or type here .."><br>
+                    <label for="textBox">Url to evaluate:</label><br>
+                    <input type="text" id="textBox" name="textBox" placeholder="Copy or type URL here .."><br>
                     <input type="submit" value="Submit" id="submit">
                 </form>
         </section>
