--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -18,5 +18,14 @@
         <footer id="footer">
             <p>Project 4 in Udacity Front End Develoer Nanodegree Pogram &copy 2018</p>
         </footer>
+        <script>
+            // Check that service workers are supported
+            if ('serviceWorker' in navigator) {
+                // Use the window load event to keep the page load performant
+                window.addEventListener('load', () => {
+                    navigator.serviceWorker.register('/service-worker.js');
+                });
+            }
+        </script>
     </body>
 </html>
